src/objects/Proxy_SCM_Agreement__c.object
<CustomObject>
    <description>CRM-QI-ESPSFDCQI-1273 Custom object used to store status of SCM agreement in legacy IMS org to validate in IQVIA org and prevent changes to opportunity based on SCM agreement status</description>
    <fields>
        <fullName>Apttus_Status_c__c</fullName>
        <description>CRM-QI-ESPSFDCQI-1273 Status of SCM agreement in legacy IMS org</description>
        <inlineHelpText>Status of SCM agreement in legacy IMS org</inlineHelpText>
        <label>Apttus__Status__c</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_Legal_Entity__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3663</description>
        <label>IMS Legal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IMS AG</fullName>
                </value>
                <value>
                    <fullName>IMS Health Canada Inc.</fullName>
                </value>
                <value>
                    <fullName>IMS Health S.r.l.</fullName>
                </value>
                <value>
                    <fullName>IMSWorld Publications Limited</fullName>
                </value>
                <value>
                    <fullName>IMS Health Consulting BVBA</fullName>
                </value>
                <value>
                    <fullName>IMS Health S.A.</fullName>
                </value>
                <value>
                    <fullName>IMS Health Limited (in UK)</fullName>
                </value>
                <value>
                    <fullName>IMS HEALTH TECHNOLOGY SOLUTION</fullName>
                </value>
                <value>
                    <fullName>IMS HEALTH INFORMATION SOLUTIONS ITALY</fullName>
                </value>
                <value>
                    <fullName>IQVIA Inc.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LI_Record_Id__c</fullName>
        <description>CRM-QI-ESPSFDCQI-1273 External id used by Mulesoft for upsert. Will contain the id of the record in the legacy org.</description>
        <externalId>true</externalId>
        <inlineHelpText>External id used by Mulesoft for upsert. Will contain the id of the record in the legacy org.</inlineHelpText>
        <label>LI Record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CRM-QI-ESPSFDCQI-1273 Link to Opportunity to which agreement is related</description>
        <inlineHelpText>Link to Opportunity to which agreement is related</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Proxy SCM Agreements</relationshipLabel>
        <relationshipName>Proxy_SCM_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>CRM-QI-ESPSFDCQI-1273 Record type name of SCM agreement record in legacy IMS org (synced to IQVIA via Mulesoft)</description>
        <inlineHelpText>Record type name of SCM agreement record in legacy IMS org (synced to IQVIA via Mulesoft)</inlineHelpText>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Amendment_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CRM-MC-ESPSFDCQI-3663</description>
        <label>is Amendment Record</label>
        <type>Checkbox</type>
    </fields>
    <label>Proxy SCM Agreement</label>
    <nameField>
        <label>Proxy SCM Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proxy SCM Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>